Reference_Docs/cloudFormation/labs/lab-1-create-ec2/5-ec2-all-default-but-ami-sg-type-key-subnet-add-eip.yaml
AWSTemplateFormatVersion: 2010-09-09

Description: >-
  Create an Amazon EC2, with multiple parameters.

Parameters:

  MySelectedSubnet:
    Description: Subnet to host the EC2
    # Check parameters type : go to https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/parameters-section-structure.html 
    Type: 'AWS::EC2::Subnet::Id'
    ConstraintDescription: subnet where this machine reside

  vpcid:
    Description: VPC of the launcher and its security group
    # Check parameters type : go to https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/parameters-section-structure.html 
    Type: 'AWS::EC2::VPC::Id'
    ConstraintDescription: must be a VPC  where the SG and the launcher reside

  InstanceType:
    Description: EC2 instance type
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
      - t2.small
      - t2.medium
    ConstraintDescription: must be a valid EC2 instance type.

  AMI:
    Description: AMI to create the EC2, you can use amazon ami
    Type: String
    Default: ami-0922553b7b0369273

  MyKey:
    Description: >-
      SSH Key Name - public-private key that you created using the console.
      You can create the key using the template, but here please use an existing key
    Type: String

Resources:

  IPAddress:
    Type: AWS::EC2::EIP
  IPAssoc:
    Type: AWS::EC2::EIPAssociation
    Properties:
      InstanceId: !Ref 'EC2Instance'
      EIP: !Ref 'IPAddress'

  EC2Instance:
    Type: 'AWS::EC2::Instance'
    Properties:
      ImageId: !Ref AMI
      InstanceType: !Ref InstanceType
      KeyName: !Ref MyKey
      NetworkInterfaces:
        - NetworkInterfaceId: !Ref NetworkInterface
          DeviceIndex: '0'

  NetworkInterface:
    Type: 'AWS::EC2::NetworkInterface'
    DependsOn: SSHANDWEB
    Properties:
      SubnetId: !Ref MySelectedSubnet
      GroupSet:
        - !Ref SSHANDWEB

  SSHANDWEB:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupName: 5-ec2-all-default-but-ami-sg-type-key-subnet-add-eip
      VpcId: !Ref vpcid 
      GroupDescription: port 22 (for ssh), port 80 and port 443 are open to the internet
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '443'
          ToPort: '443'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
